# HospitalSimProject

./: AppointmentScheduler.h  CMakeLists.txt  Doctor.h  DynamicLib.cpp  DynamicLib.h  DynamicLibBindings.cpp  HospitalSimProject.exp  HospitalSimProject.lib  HospitalSystem.cpp  HospitalSystem.h  Patient.h  README.md  c_cpp_properties.json  doctor.h  doctors.txt  file_handler.h  hospital.h  kolejki.txt  launch.json  main.cpp  parallel_calculator.cpp  parallel_calculator.exp  parallel_calculator.h  parallel_calculator.lib  patient.h  patients.txt  person.h  plan działania.txt  python_bindings.cpp  settings.json  setup.py  symptoms.txt  tasks.json
